switcher-management/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switcher-management
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: switcher-management
  template:
    metadata:
      labels:
        app: switcher-management
    spec:
      containers:
        - name: switcher-management
          image: trackerforce/switcher-management:latest
          command: ["/bin/sh", "-c", "./setup.sh"]
          ports:
            - containerPort: 80
              protocol: TCP
          resources: 
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
