switcher-management/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: switcher-management
  labels:
    app: switcher-management
spec:
  selector:
    app: switcher-management
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
